--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
     <title>Simple JS Weather API</title>
 </head>
 <body>
+
+    <input type="text" class="inputValue" placeholder="Enter city">
+    <button class="btn">Submit</button>
     
     <div class="location">
-        <h1 class="location-timezone">Timezone</h1>
+        <h1 class="location-name">Name</h1>
         <p>ICON</p>
     </div>
 
