added icon data

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     
     <div class="location">
         <h1 class="location-name">Name</h1>
-        <p>ICON</p>
+        <i class="icon">ICON</i>
     </div>
 
     <div class="temperature">
