--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="temperature">
         <div class="degree-section">
             <h2 class="temperature-degree">34</h2>
-            <span>F</span>
+            <span>C</span>
         </div>
  
         <div class="temperature-description">It's friggincold</div>
