--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 
     <div class="temperature">
         <div class="degree-section">
-            <h2 class="temperature-degree">34</h2>
+            <h2 class="temperature-degree">--</h2>
             <span>C</span>
         </div>
  
-        <div class="temperature-description">It's friggincold</div>
+        <div class="temperature-description">.....</div>
     </div>
 
     <script src="main.js"></script>
