added icon image

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     
     <div class="location">
         <h1 class="location-name">Name</h1>
-        <i class="icon">ICON</i>
+        <i class="icon" src=""></i>
     </div>
 
     <div class="temperature">
