--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         </div>
  
         <div class="temperature-description">.....</div>
-        <div class="humidity">humidiy</div>
-        <div class="feels_like">feels like</div>
+        <div class="humidity">...</div>
+        <div class="feels_like">it feels like...</div>
     </div>
 
     <script src="main.js"></script>
